--- a/deployment.yaml
+++ b/deployment.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: "web"
-        image: "hollisc/bluecompute-web:0.6.0"
+        image: "us.icr.io/devops-gse-poc/bluecompute-web:0.6.0"  #hollisc/bluecompute-web:0.6.0
         imagePullPolicy: "Always"
         volumeMounts:
         - name: config-volume
