--- a/web-app-deploy.yaml
+++ b/web-app-deploy.yaml
@@ -52,11 +52,15 @@ metadata:
   labels:
     image.opencontainers.org/title: web
     stack.appsody.dev/version: 0.2.5
+    app: "web"
   name: web
   namespace: oscar-workspace
 spec:
   applicationImage: dev.local/web
   createKnativeService: false
+  selector:
+    matchLabels:
+      app: "web"
   expose: true
   service:
     port: 8000
