--- a/web-app-deploy.yaml
+++ b/web-app-deploy.yaml
@@ -56,7 +56,7 @@ metadata:
   name: web
   namespace: dev
 spec:
-  applicationImage: us.icr.io/devops-gse-poc/refarch-cloudnative-bluecompute-web-appsody:cc6234f #dev.local/web 
+  applicationImage: hollisc/bluecompute-web-appsody #dev.local/web
   createKnativeService: false
   selector:
     matchLabels:
